--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -74,10 +74,14 @@ function estimatePrice() {
         console.error('Error:', error);
     });
 }
-function checkStatus(requestId) {
+function checkStatus(requestId, retryCount = 0) {
     fetch('/status/' + requestId)
     .then(response => {
         if (!response.ok) {
+            // If a 502 error occurs, retry up to 3 times
+            if (response.status === 502 && retryCount < 5) {
+                return checkStatus(requestId, retryCount + 1);
+            }
             throw new Error('HTTP error ' + response.status);
         }
         return response.json();
@@ -98,6 +102,7 @@ function checkStatus(requestId) {
         console.error('Error:', error);
     });
 }
+
 
 
 
