--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -23,6 +23,7 @@ Estimate Price
 {% block content %}
 <div class="container" style="height: auto;">
     <h1>Estimate Price</h1>
+    <br></br>
 
     <form id="estimate-form" class="form-group">
         <input type="text" id="brand" placeholder="Brand" required class="form-control">
@@ -30,7 +31,9 @@ Estimate Price
         <input type="text" id="color" placeholder="Color" required class="form-control">
         <input type="number" id="buying_price" placeholder="Buying Price" required class="form-control">
         <input type="number" id="days" placeholder="Days" required class="form-control">
-        <button type="button" onclick="estimatePrice()" class="btn btn-primary">Estimate</button>
+        <br></br>
+        <button type="button" onclick="estimatePrice()" class="btn btn-primary">Estimate Price</button>
+        <button type="button" onclick="estimatePriceML()" class="btn btn-light">Estimate Price ML</button>
     </form>
 
 <br></br>
@@ -49,7 +52,7 @@ Estimate Price
 <script>
 var loader = document.getElementById('loader');
 
-function estimatePrice() {
+function estimatePriceML() {
     var brand = document.getElementById('brand').value;
     var model = document.getElementById('model').value;
     var color = document.getElementById('color').value;
@@ -58,7 +61,7 @@ function estimatePrice() {
 
     loader.style.display = 'block';
 
-    fetch('/estimate_price/' + brand + '/' + model + '/' + color + '/' + buying_price + '/' + days)
+    fetch('/estimate_price_ml/' + brand + '/' + model + '/' + color + '/' + buying_price + '/' + days)
     .then(response => {
         if (!response.ok) {
             throw new Error('HTTP error ' + response.status);
@@ -106,24 +109,81 @@ function checkStatus(requestId, retryCount = 0) {
     });
 }
 
+function estimatePrice() {
+    var brand = document.getElementById('brand').value;
+    var model = document.getElementById('model').value;
+    var color = document.getElementById('color').value;
+    var buying_price = document.getElementById('buying_price').value;
+    var days = document.getElementById('days').value;
 
+    loader.style.display = 'block';
 
-
+    fetch('/estimate_price/' + brand + '/' + model + '/' + color + '/' + buying_price + '/' + days)
+    .then(response => {
+        if (!response.ok) {
+            throw new Error('HTTP error ' + response.status);
+        }
+        return response.json();
+    })
+    .then(data => {
+        loader.style.display = 'none';
+        displayResults(data);
+    })
+    .catch(error => {
+        loader.style.display = 'none';
+        console.error('Error:', error);
+    });
+}
 
 function displayResults(data) {
     var resultDiv = document.getElementById('result');
-    resultDiv.innerHTML = `
-        <p>Number of sold bags in the database for this bag: ${data.bags_count} </p>
-        ${data.color_data_exists ? `<p>Number of sold bags in the database for this color: ${data.bags_color_count} </p>` : ''}
+    var cardContent = '';
+
+    if (data['bags_count'] !== undefined) { // Results from estimatePriceML
+        cardContent = `
+            <div class="card">
+                <div class="card-header">
+                    <h5 class="card-title">Estimate Price ML Results</h5>
+                </div>
+                <div class="card-body">
+                    <p>Number of sold bags in the database for this bag: ${data.bags_count} </p>
+                    ${data.color_data_exists ? `<p>Number of sold bags in the database for this color: ${data.bags_color_count} </p>` : ''}
+                    <p>Average price - all models: ${data.avg_price_all} €</p>
+                    <p>Closest model to average price for all models: ${data.best_model_all} with a difference of ${data.diff_allmodels} €</p>
+                    ${data.color_data_exists ? `<p>Average price - ${data.color}: ${data.avg_price_color} €</p>` : ''}
+                    ${data.color_data_exists ? `<p>Closest model to average price for ${data.color} bags: ${data.best_model_color} with a difference of ${data.diff_color_models} €</p>` : ''}
+                    <p>Recommended price is ${Math.max(data.predicted_price_color, data.predicted_price_all)} €</p>
+                    <p>Profit - all: ${data.profit_all} €, Profit - color: ${data.profit_color ? data.profit_color : 'N/A'} €</p>
+                </div>
+            </div>
+            <br></br>
+
+        `;
+    } else { // Results from estimatePrice
+        cardContent = `
+                <div class="card">
+            <div class="card-header">
+                <h5 class="card-title">Estimate Price Results</h5>
+            </div>
+            <div class="card-body">
+                <p>Number of bags: ${data["Number of bags"]}</p>
+                <p>Number of bags - color: ${data["Number of bags - color"]}</p>
+                <p>Average price: ${Math.round(data["Average price"])} €</p>
+                <p>Average price - color: ${Math.round(data["Average price - color"])} €</p>
+                <p>Recommended price - all: ${Math.round(data["Recommended price - all"])} €, Profit - all: ${Math.round(data["Profit- all"])} €</p>
+                <p>Recommended price - color: ${Math.round(data["Recommended price - all"])} €, Profit - color: ${Math.round(data["Profit - color"])} €</p>
+            </div>
+        </div>
         <br></br>
-        <p>Average price - all models: ${data.avg_price_all        } €</p>
-        <p>Closest model to average price for all models: ${data.best_model_all} with a difference of ${data.diff_allmodels} €, a price of ${data.predicted_price_all} € and a profit of ${data.profit_all} €</p>
-        <br></br>
-        ${data.color_data_exists ? `<p>Average price - ${data.color}: ${data.avg_price_color} €</p>` : ''}
-        ${data.color_data_exists ? `<p>Closest model to average price for ${data.color} bags: ${data.best_model_color} with a difference of ${data.diff_color_models} €, a price of ${data.predicted_price_color} € and a profit of ${data.profit_color} €</p>` : ''}
-        <br></br>
-        <p>Recommended price is ${Math.max(data.predicted_price_color, data.predicted_price_all)} €</p>
-    `;
+
+
+        `;
+    }
+
+    resultDiv.innerHTML += cardContent; // Append new results to existing content
 }
+
+
+
 </script>
 {% endblock %}
