--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -183,8 +183,8 @@ function displayResults(data) {
                     <p>Number of bags - color: ${data["Number of bags - color"]}</p>
                     <p>Average price: ${Math.round(data["Average price"])} €</p>
                     <p>Average price - color: ${Math.round(data["Average price - color"])} €</p>
-                    <p>Recommended price - all: ${Math.round(data["Recommended price - all"])} €, Profit - all: ${Math.round(data["Profit- all"])} €</p>
-                    <p>Recommended price - color: ${Math.round(data["Recommended price - all"])} €, Profit - color: ${Math.round(data["Profit - color"])} €</p>
+                    <p>Recommended price - all: ${Math.round(data["Recommended price - all"])} € for a profit of ${Math.round(data["Profit- all"])} €</p>
+                    <p>Recommended price - color: ${Math.round(data["Recommended price - color"])} € for a profit of ${Math.round(data["Profit - color"])} €</p>
                 </div>
             </div>
             <br></br>
