--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -36,14 +36,14 @@ Estimate Price
         <button type="button" onclick="estimatePriceML()" class="btn btn-light">Estimate Price ML</button>
     </form>
 
-<br></br>
-
-    <div id="result" style="height: auto;">
-        <div id="loader" class="spinner-border text-primary" role="status" style="display: none;">
-            <span>Loading...</span>
-        </div>
+    <div id="loader" class="spinner-border text-primary" role="status" style="display: none;">
+        <span>Loading...</span>
     </div>
-</div>
+    <br></br>
+
+    
+    <div id="result" style="height: auto;"></div>
+    </div>
 
 </div>
 
