--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -158,8 +158,8 @@ function displayResults(data) {
                     ${data.color_data_exists ? `<p>Number of bags - color: ${data.bags_color_count} </p>` : ''}
                     <p>Average price: ${data.avg_price_all} €</p>
                     ${data.color_data_exists ? `<p>Average price - ${data.color}: ${data.avg_price_color} €</p>` : ''}
-                    <p>Recommended price - all is ${data.predicted_price_all} € for a profit of ${data.profit_all}</p>
-                    ${data.color_data_exists ? `<p>Recommended price - color is ${data.predicted_price_color} € for a profit of ${data.profit_color}</p>` : ''}
+                    <p>Recommended price - all is ${data.predicted_price_all} € for a profit of ${data.profit_all} €</p>
+                    ${data.color_data_exists ? `<p>Recommended price - color is ${data.predicted_price_color} € for a profit of ${data.profit_color} €</p>` : ''}
                 </div>
             </div>
             <br></br>
@@ -181,8 +181,8 @@ function displayResults(data) {
                     <p>Number of bags - color: ${data["Number of bags - color"]}</p>
                     <p>Average price: ${Math.round(data["Average price"])} €</p>
                     <p>Average price - color: ${Math.round(data["Average price - color"])} €</p>
-                    <p>Recommended price - all: ${Math.round(data["Recommended price - all"])} € for a profit of ${Math.round(data["Profit- all"])} €</p>
-                    <p>Recommended price - color: ${Math.round(data["Recommended price - color"])} € for a profit of ${Math.round(data["Profit - color"])} €</p>
+                    <p>Recommended price - all is ${Math.round(data["Recommended price - all"])} € for a profit of ${Math.round(data["Profit- all"])} €</p>
+                    <p>Recommended price - color is ${Math.round(data["Recommended price - color"])} € for a profit of ${Math.round(data["Profit - color"])} €</p>
                 </div>
             </div>
             <br></br>
