--- a/templates/estimate_price.html
+++ b/templates/estimate_price.html
@@ -181,6 +181,8 @@ function displayResults(data) {
                     <p>Number of bags - color: ${data["Number of bags - color"]}</p>
                     <p>Average price: ${Math.round(data["Average price"])} €</p>
                     <p>Average price - color: ${Math.round(data["Average price - color"])} €</p>
+                    <p>Average price (within time limit): ${Math.round(data["Average price - for the period"])} €</p>
+                    <p>Average price - color (within time limit): ${Math.round(data["Average price - color - for the period"])} €</p>
                     <p>Recommended price - all is ${Math.round(data["Recommended price - all"])} € for a profit of ${Math.round(data["Profit- all"])} €</p>
                     <p>Recommended price - color is ${Math.round(data["Recommended price - color"])} € for a profit of ${Math.round(data["Profit - color"])} €</p>
                 </div>
